[gd_scene load_steps=12 format=2]

[ext_resource path="res://Terrain/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Player/PlayerSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cutscenes/IntroCutscene.gd" type="Script" id=6]
[ext_resource path="res://Characters/Enemies/ForkliftBase.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/DialogBox.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=3]
resource_name = "PlayerEscape"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 104, 240 ), Vector2( 480, 240 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "PlayerHide"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -272, 240 ), Vector2( 104, 240 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "run", "idle" ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="IntroCutscene" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PlayerEscape = SubResource( 3 )
anims/PlayerHide = SubResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 589792, 6, 0, 589793, 6, 0, 589794, 6, 0, 589795, 6, 0, 589796, 6, 0, 589797, 6, 0, 589798, 6, 0, 589799, 6, 0, 589800, 6, 0, 589801, 6, 0, 589802, 6, 0, 589803, 6, 0, 589804, 6, 0, 589805, 6, 0, 589806, 6, 0, 589807, 6, 0, 589808, 6, 0, 589809, 6, 0, 589810, 6, 0, 589811, 6, 0, 589812, 6, 0, 589813, 6, 0, 589814, 6, 0, 589815, 6, 0, 589816, 6, 0, 589817, 6, 0, 589818, 6, 0, 589819, 6, 0, 589820, 6, 0, 589821, 6, 0, 589822, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 524315, 6, 0, 524316, 6, 0, 524317, 6, 0, 524318, 6, 0, 524319, 6, 0, 524320, 6, 0, 524321, 6, 0, 655328, 5, 0, 655329, 5, 0, 655330, 5, 0, 655331, 5, 0, 655332, 5, 0, 655333, 5, 0, 655334, 5, 0, 655335, 5, 0, 655336, 5, 0, 655337, 5, 0, 655338, 5, 0, 655339, 5, 0, 655340, 5, 0, 655341, 5, 0, 655342, 5, 0, 655343, 5, 0, 655344, 5, 0, 655345, 5, 0, 655346, 5, 0, 655347, 5, 0, 655348, 5, 0, 655349, 5, 0, 655350, 5, 0, 655351, 5, 0, 655352, 5, 0, 655353, 5, 0, 655354, 5, 0, 655355, 5, 0, 655356, 5, 0, 655357, 5, 0, 655358, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 589856, 5, 0, 589857, 5, 0, 720864, 5, 0, 720865, 5, 0, 720866, 5, 0, 720867, 5, 0, 720868, 5, 0, 720869, 5, 0, 720870, 5, 0, 720871, 5, 0, 720872, 5, 0, 720873, 5, 0, 720874, 5, 0, 720875, 5, 0, 720876, 5, 0, 720877, 5, 0, 720878, 5, 0, 720879, 5, 0, 720880, 5, 0, 720881, 5, 0, 720882, 5, 0, 720883, 5, 0, 720884, 5, 0, 720885, 5, 0, 720886, 5, 0, 720887, 5, 0, 720888, 5, 0, 720889, 5, 0, 720890, 5, 0, 720891, 5, 0, 720892, 5, 0, 720893, 5, 0, 720894, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 5, 0, 786400, 5, 0, 786401, 5, 0, 786402, 5, 0, 786403, 5, 0, 786404, 5, 0, 786405, 5, 0, 786406, 5, 0, 786407, 5, 0, 786408, 5, 0, 786409, 5, 0, 786410, 5, 0, 786411, 5, 0, 786412, 5, 0, 786413, 5, 0, 786414, 5, 0, 786415, 5, 0, 786416, 5, 0, 786417, 5, 0, 786418, 5, 0, 786419, 5, 0, 786420, 5, 0, 786421, 5, 0, 786422, 5, 0, 786423, 5, 0, 786424, 5, 0, 786425, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 5, 0, 851936, 5, 0, 851937, 5, 0, 851938, 5, 0, 851939, 5, 0, 851940, 5, 0, 851941, 5, 0, 851942, 5, 0, 851943, 5, 0, 851944, 5, 0, 851945, 5, 0, 851946, 5, 0, 851947, 5, 0, 851948, 5, 0, 851949, 5, 0, 851950, 5, 0, 851951, 5, 0, 851952, 5, 0, 851953, 5, 0, 851954, 5, 0, 851955, 5, 0, 851956, 5, 0, 851957, 5, 0, 851958, 5, 0, 851959, 5, 0, 851960, 5, 0, 851961, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786463, 5, 0, 786464, 5, 0, 786465, 5, 0, 917472, 5, 0, 917473, 5, 0, 917474, 5, 0, 917475, 5, 0, 917476, 5, 0, 917477, 5, 0, 917478, 5, 0, 917479, 5, 0, 917480, 5, 0, 917481, 5, 0, 917482, 5, 0, 917483, 5, 0, 917484, 5, 0, 917485, 5, 0, 917486, 5, 0, 917487, 5, 0, 917488, 5, 0, 917489, 5, 0, 917490, 5, 0, 917491, 5, 0, 917492, 5, 0, 917493, 5, 0, 917494, 5, 0, 917495, 5, 0, 917496, 5, 0, 917497, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 5, 0, 851974, 5, 0, 851975, 5, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 851994, 5, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 5, 0, 852000, 5, 0, 852001, 5, 0, 983008, 5, 0, 983009, 5, 0, 983010, 5, 0, 983011, 5, 0, 983012, 5, 0, 983013, 5, 0, 983014, 5, 0, 983015, 5, 0, 983016, 5, 0, 983017, 5, 0, 983018, 5, 0, 983019, 5, 0, 983020, 5, 0, 983021, 5, 0, 983022, 5, 0, 983023, 5, 0, 983024, 5, 0, 983025, 5, 0, 983026, 5, 0, 983027, 5, 0, 983028, 5, 0, 983029, 5, 0, 983030, 5, 0, 983031, 5, 0, 983032, 5, 0, 983033, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 917530, 5, 0, 917531, 5, 0, 917532, 5, 0, 917533, 5, 0, 917534, 5, 0, 917535, 5, 0, 917536, 5, 0, 917537, 5, 0, 1048544, 5, 0, 1048545, 5, 0, 1048546, 5, 0, 1048547, 5, 0, 1048548, 5, 0, 1048549, 5, 0, 1048550, 5, 0, 1048551, 5, 0, 1048552, 5, 0, 1048553, 5, 0, 1048554, 5, 0, 1048555, 5, 0, 1048556, 5, 0, 1048557, 5, 0, 1048558, 5, 0, 1048559, 5, 0, 1048560, 5, 0, 1048561, 5, 0, 1048562, 5, 0, 1048563, 5, 0, 1048564, 5, 0, 1048565, 5, 0, 1048566, 5, 0, 1048567, 5, 0, 1048568, 5, 0, 1048569, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 983066, 5, 0, 983067, 5, 0, 983068, 5, 0, 983069, 5, 0, 983070, 5, 0, 983071, 5, 0, 983072, 5, 0, 983073, 5, 0, 1114080, 5, 0, 1114081, 5, 0, 1114082, 5, 0, 1114083, 5, 0, 1114084, 5, 0, 1114085, 5, 0, 1114086, 5, 0, 1114087, 5, 0, 1114088, 5, 0, 1114089, 5, 0, 1114090, 5, 0, 1114091, 5, 0, 1114092, 5, 0, 1114093, 5, 0, 1114094, 5, 0, 1114095, 5, 0, 1114096, 5, 0, 1114097, 5, 0, 1114098, 5, 0, 1114099, 5, 0, 1114100, 5, 0, 1114101, 5, 0, 1114102, 5, 0, 1114103, 5, 0, 1114104, 5, 0, 1114105, 5, 0, 1114106, 5, 0, 1114107, 5, 0, 1114108, 5, 0, 1114109, 5, 0, 1114110, 5, 0, 1114111, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 5, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1048602, 5, 0, 1048603, 5, 0, 1048604, 5, 0, 1048605, 5, 0, 1048606, 5, 0, 1048607, 5, 0, 1048608, 5, 0, 1048609, 5, 0, 1179616, 5, 0, 1179617, 5, 0, 1179618, 5, 0, 1179619, 5, 0, 1179620, 5, 0, 1179621, 5, 0, 1179622, 5, 0, 1179623, 5, 0, 1179624, 5, 0, 1179625, 5, 0, 1179626, 5, 0, 1179627, 5, 0, 1179628, 5, 0, 1179629, 5, 0, 1179630, 5, 0, 1179631, 5, 0, 1179632, 5, 0, 1179633, 5, 0, 1179634, 5, 0, 1179635, 5, 0, 1179636, 5, 0, 1179637, 5, 0, 1179638, 5, 0, 1179639, 5, 0, 1179640, 5, 0, 1179641, 5, 0, 1179642, 5, 0, 1179643, 5, 0, 1179644, 5, 0, 1179645, 5, 0, 1179646, 5, 0, 1179647, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 5, 0, 1114139, 5, 0, 1114140, 5, 0, 1114141, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1114144, 5, 0, 1114145, 5, 0, 1245152, 5, 0, 1245153, 5, 0, 1245154, 5, 0, 1245155, 5, 0, 1245156, 5, 0, 1245157, 5, 0, 1245158, 5, 0, 1245159, 5, 0, 1245160, 5, 0, 1245161, 5, 0, 1245162, 5, 0, 1245163, 5, 0, 1245164, 5, 0, 1245165, 5, 0, 1245166, 5, 0, 1245167, 5, 0, 1245168, 5, 0, 1245169, 5, 0, 1245170, 5, 0, 1245171, 5, 0, 1245172, 5, 0, 1245173, 5, 0, 1245174, 5, 0, 1245175, 5, 0, 1245176, 5, 0, 1245177, 5, 0, 1245178, 5, 0, 1245179, 5, 0, 1245180, 5, 0, 1245181, 5, 0, 1245182, 5, 0, 1245183, 5, 0, 1179648, 5, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 5, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0, 1179674, 5, 0, 1179675, 5, 0, 1179676, 5, 0, 1179677, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1179680, 5, 0, 1179681, 5, 0, 1310688, 5, 0, 1310689, 5, 0, 1310690, 5, 0, 1310691, 5, 0, 1310692, 5, 0, 1310693, 5, 0, 1310694, 5, 0, 1310695, 5, 0, 1310696, 5, 0, 1310697, 5, 0, 1310698, 5, 0, 1310699, 5, 0, 1310700, 5, 0, 1310701, 5, 0, 1310702, 5, 0, 1310703, 5, 0, 1310704, 5, 0, 1310705, 5, 0, 1310706, 5, 0, 1310707, 5, 0, 1310708, 5, 0, 1310709, 5, 0, 1310710, 5, 0, 1310711, 5, 0, 1310712, 5, 0, 1310713, 5, 0, 1310714, 5, 0, 1310715, 5, 0, 1310716, 5, 0, 1310717, 5, 0, 1310718, 5, 0, 1310719, 5, 0, 1245184, 5, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0 )

[node name="Decorations" type="Node2D" parent="."]

[node name="Platform" parent="Decorations" instance=ExtResource( 3 )]
position = Vector2( -384, 128 )

[node name="Platform2" parent="Decorations" instance=ExtResource( 3 )]
position = Vector2( -128, 64 )

[node name="Platform3" parent="Decorations" instance=ExtResource( 3 )]
position = Vector2( 304, 128 )

[node name="Box" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 136, 248 )

[node name="Box2" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 120, 248 )

[node name="Box3" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 128, 232 )

[node name="Box4" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 152, 248 )

[node name="Box5" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 144, 232 )

[node name="Box6" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 168, 248 )

[node name="Box7" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 160, 232 )

[node name="Box8" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 184, 248 )

[node name="Box9" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 144, 216 )

[node name="Box10" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 264, 120 )

[node name="Box11" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 280, 120 )

[node name="Box12" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 296, 120 )

[node name="Box13" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 272, 104 )

[node name="Box14" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( 288, 104 )

[node name="Box15" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -80, 56 )

[node name="Box16" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -96, 56 )

[node name="Box17" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -88, 40 )

[node name="Box18" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -152, 56 )

[node name="Box19" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -384, 120 )

[node name="Box20" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -384, 104 )

[node name="Box21" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -408, 120 )

[node name="Box22" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -400, 104 )

[node name="Box23" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -360, 120 )

[node name="Box24" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -352, 104 )

[node name="Box25" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -344, 120 )

[node name="Box26" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -368, 104 )

[node name="Box27" parent="Decorations" instance=ExtResource( 4 )]
position = Vector2( -376, 88 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 152 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite" parent="." instance=ExtResource( 5 )]
position = Vector2( 480, 240 )
frame = 5
playing = true

[node name="ForkliftBase" parent="." instance=ExtResource( 7 )]
position = Vector2( -536, 232 )

[node name="ForkliftBase2" parent="." instance=ExtResource( 7 )]
position = Vector2( -592, 232 )

[node name="ForkliftBase3" parent="." instance=ExtResource( 7 )]
position = Vector2( -656, 232 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 56, 248 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogBox" parent="CanvasLayer" instance=ExtResource( 8 )]
dialog = PoolStringArray( "Where did it go\?", "I don\'t know. It could be anywhere in this warehouse.", "We can\'t let it escape. Let\'s double check the loading dock." )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
